# breezy

./: .gitignore  Cargo.toml
crates/bazaar/src/: dirstate.rs  hashcache.rs
crates/osutils/: Cargo.toml
crates/osutils-py/: Cargo.toml
crates/osutils-py/src/: lib.rs
crates/osutils/src/: file.rs  lib.rs  mounts-win32.rs  path.rs  terminal.rs  win32.rs
src/: bedding.rs  lockdir.rs  trace.rs
